No curve is "active" after selecting all curves (in Graph Editor) #85038

Closed
opened 2021-01-25 11:56:25 +01:00 by Rik Schutte · 10 comments

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.38.0, 5.8.0-7630-generic, LLVM 11.0.0) X.Org 4.6 (Core Profile) Mesa 20.2.1

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-01-18 14:02, hash: 023ebb890b
Worked: (newest version of Blender that worked as expected)
(I had this issue since 2.91.0 already)

Short description of error
The 'Modifiers' tab disappears when selecting 'All' in the Graph Editor, however. when deselecting 1 single channel (for example X Location) and selecting it again. The 'Modifier' seem to be tricked and will appear.

Then when applying a modifier with multiple channels selected, it will only apply to the last selected channel. The only way to apply a modifier to All desirable channels is to:
(See steps to reproduce the error)

Exact steps for others to reproduce the error

{F9596885}- Select 1 channel (i.e. X Location)

  • Apply a modifier (i.e. Cycle)
  • Hit the 'copy modifier' button (within the Modifier tab)
  • Select all channels. ( the Modifier tab will then disappear)
  • Deselect 1 channel, and select it again to make the Modifier tab reappear.
  • Hit the 'paste' button to apply the Cycle modifier to all channels.

[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.38.0, 5.8.0-7630-generic, LLVM 11.0.0) X.Org 4.6 (Core Profile) Mesa 20.2.1 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-01-18 14:02, hash: `023ebb890b` Worked: (newest version of Blender that worked as expected) (I had this issue since 2.91.0 already) **Short description of error** The 'Modifiers' tab disappears when selecting 'All' in the Graph Editor, however. when deselecting 1 single channel (for example X Location) and selecting it again. The 'Modifier' seem to be tricked and will appear. Then when applying a modifier with multiple channels selected, it will only apply to the last selected channel. The only way to apply a modifier to All desirable channels is to: (See steps to reproduce the error) **Exact steps for others to reproduce the error** {[F9596885](https://archive.blender.org/developer/F9596885/modifier_bug.mp4)}- Select 1 channel (i.e. X Location) - Apply a modifier (i.e. Cycle) - Hit the 'copy modifier' button (within the Modifier tab) - Select all channels. ( the Modifier tab will then disappear) - Deselect 1 channel, and select it again to make the Modifier tab reappear. - Hit the 'paste' button to apply the Cycle modifier to all channels. [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Rikstopher

Added subscriber: @Rikstopher
Member

Added subscribers: @dr.sybren, @lichtwerk

Added subscribers: @dr.sybren, @lichtwerk
Member

Not sure I understand correctly:

  • modifiers tab [same as FCurve tab] show the active Fcurve (and the modifiers on the active FCurve
  • modifiers are only added to the active FCurve [you can paste to all selected though] -- this is the same as for object modifiers, no?
  • if you have no active FCurve/channel (by deselecting all), no modifiers are shown

This all seems to be working as designed?

However, there are things that are inconsistent with how this works for objects:

  • deselecting all keyframes [in the main region of the Graph Editor] will keep an active FCurve
  • deselecting all channels {key A} in the channels region will clear the active FCurve
  • selecting all channels {key A} in the channels region will clear the active FCurve

Dont think the last two are neccessary @dr.sybren?

Not sure I understand correctly: - modifiers tab [same as FCurve tab] show the **active** Fcurve (and the modifiers on the **active** FCurve - modifiers are only added to the **active** FCurve [you can paste to all selected though] -- this is the same as for object modifiers, no? - if you have no active FCurve/channel (by deselecting all), no modifiers are shown This all seems to be working as designed? However, there are things that are inconsistent with how this works for objects: - deselecting all keyframes [in the main region of the Graph Editor] will keep an active FCurve - deselecting all channels {key A} in the channels region will clear the active FCurve - selecting all channels {key A} in the channels region will clear the active FCurve Dont think the last two are neccessary @dr.sybren?
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

In #85038#1100295, @lichtwerk wrote:
However, there are things that are inconsistent with how this works for objects:

  • deselecting all keyframes [in the main region of the Graph Editor] will keep an active FCurve

This is consitent with objects; you can have an active object without having any object selected. This is debated in #82359.

  • deselecting all channels {key A} in the channels region will clear the active FCurve
  • selecting all channels {key A} in the channels region will clear the active FCurve

Dont think the last two are neccessary @dr.sybren?

The first one IMO is fine because there is no visual indication of which is the active FCurve anyway. We're trying to push for a "nothing selected means nothing active" approach, but that's discussed in #82359.
The second one doesn't really make sense to me, though, and looks like a bug or at least a design flaw.

> In #85038#1100295, @lichtwerk wrote: > However, there are things that are inconsistent with how this works for objects: > - deselecting all keyframes [in the main region of the Graph Editor] will keep an active FCurve This is consitent with objects; you can have an active object without having any object selected. This is debated in #82359. > - deselecting all channels {key A} in the channels region will clear the active FCurve > - selecting all channels {key A} in the channels region will clear the active FCurve > > Dont think the last two are neccessary @dr.sybren? The first one IMO is fine because there is no visual indication of which is the active FCurve anyway. We're trying to push for a "nothing selected means nothing active" approach, but that's discussed in #82359. The second one doesn't really make sense to me, though, and looks like a bug or at least a design flaw.

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz

yup consistent doesn't mean it's good.

i think the last 2 you mentioned A to deselect clearing the active one is good., but not clearing when selecting all channels.

yup consistent doesn't mean it's good. i think the last 2 you mentioned A to deselect clearing the active one is good., but not clearing when selecting all channels.
Sybren A. Stüvel changed title from F-Curve 'Modifiers' tab disappear when selecting All curves (in Graph Editor) to No curve is "active" after selecting all curves (in Graph Editor) 2021-01-26 15:12:06 +01:00
Sybren A. Stüvel self-assigned this 2021-01-26 15:12:06 +01:00

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

This issue was referenced by 26b5760d6d

This issue was referenced by 26b5760d6d75cb2bc9a1d8f8158e4982972d467f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85038
No description provided.