Fix T85038: No curve is "active" after selecting all curves

Check for selection status beforec learing the "active" flag from an
FCurve. This allows the "Select All Curves" operator to retain what is
seen as the active curve.